# cecher

./: CMakeLists.txt  LICENSE  README.md  cecher.cpp
examples/: circle.csv  circle_60.csv  dragon.txt  random.csv  random_20.csv  random_60.csv  set_0.txt  set_1.txt  set_10.txt  set_11.txt  set_12.txt  set_13.txt  set_14.txt  set_15.txt  set_16.txt  set_17.txt  set_18.txt  set_19.txt  set_2.txt  set_20.txt  set_21.txt  set_3.txt  set_4.txt  set_5.txt  set_6.txt  set_7.txt  set_8.txt  sphere_60.csv  torus.csv  torus_small.csv
